[feat] 회원가입 > 비밀번호 입력 화면 변경된 컬러, 서체 시스템, 뷰 배치 간격 적용

--- a/app/src/main/res/layout/fragment_sign_up_password.xml
+++ b/app/src/main/res/layout/fragment_sign_up_password.xml
@@ -10,15 +10,9 @@
             name="viewModel"
             type="com.hyeeyoung.wishboard.presentation.sign.SignViewModel" />
 
-        <import type="com.hyeeyoung.wishboard.R" />
-
         <import type="com.hyeeyoung.wishboard.presentation.sign.SignType" />
 
-        <import type="androidx.navigation.Navigation" />
-
         <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
-
-        <import type="android.view.View" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,116 +20,84 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+        <include
+            android:id="@+id/top_app_bar"
+            layout="@layout/view_top_app_bar"
+            app:title="@{@string/sign_up}" />
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/back"
-                style="@style/Widget.Button.Icon.Navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
-                android:src="@drawable/ic_back"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                style="@style/Widget.Tab.Detail.TextAppearance.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_up"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/spacingBase"
-                android:fontFamily="@font/suit_r"
-                android:text="@{String.format(context.getString(R.string.step_format), 2, 2)}"
-                android:textColor="@color/gray_700"
-                android:textSize="@dimen/typographyBase"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="2/2 단계" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginEnd="@dimen/spacingBase"
+            android:text="@{@string/step_format(2, 2)}"
+            android:textAppearance="@style/TextAppearance.Suit.D2"
+            android:textColor="@color/gray_700"
+            app:layout_constraintBottom_toBottomOf="@id/top_app_bar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/top_app_bar"
+            tools:text="2/2 단계" />
 
         <ImageView
             android:id="@+id/password_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacingBase"
             android:src="@drawable/ic_lock"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@id/top_app_bar" />
 
         <TextView
             android:id="@+id/password_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing10"
-            android:fontFamily="@font/suit_r"
             android:gravity="center"
-            android:lineSpacingExtra="@dimen/spacingMicro"
+            android:lineSpacingExtra="@dimen/lineSpacing"
             android:text="@string/sign_up_password_guide"
+            android:textAppearance="@style/TextAppearance.Suit.D2"
             android:textColor="@color/gray_700"
-            android:textSize="@dimen/typographyDescription"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/password_icon" />
 
-        <LinearLayout
+        <EditText
+            android:id="@+id/password_input"
+            style="@style/Widget.EditText.Basic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacingBase"
-            android:orientation="vertical"
+            android:layout_marginTop="32dp"
+            android:hint="@string/sign_password_hint"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
+            android:text="@{viewModel.registrationPassword}"
             app:layout_constraintTop_toBottomOf="@id/password_detail">
 
-            <EditText
-                android:id="@+id/password_input"
-                style="@style/Widget.EditText.Basic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sign_password_hint"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:onTextChanged="@{viewModel::onRegistrationPasswordTextChanged}"
-                android:paddingVertical="@dimen/spacing12"
-                android:text="@{viewModel.registrationPassword}"
-                android:textAppearance="@style/Widget.EditText.Basic.TextAppearance">
+            <requestFocus />
+        </EditText>
 
-                <requestFocus />
-            </EditText>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/spacingBase"
-                android:layout_marginTop="@dimen/spacing5"
-                android:text="@string/sign_password_detail"
-                android:textAppearance="@style/Widget.TextAppearance.Detail"
-                android:visibility="@{viewModel.registrationPassword.length() > 0 &amp;&amp; viewModel.validPasswordFormat == false ? View.VISIBLE : View.GONE}" />
-
-        </LinearLayout>
+        <TextView
+            style="@style/Widget.TextAppearance.Detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacingBase"
+            android:layout_marginTop="@dimen/spacing5"
+            android:text="@string/sign_password_detail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/password_input"
+            app:visibility="@{viewModel.registrationPassword.length() > 0 &amp;&amp; viewModel.validPasswordFormat == false}" />
 
         <TextView
             android:id="@+id/sign_term"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/spacingBase"
-            android:layout_marginBottom="@dimen/spacing5"
-            android:fontFamily="@font/suit_r"
+            android:layout_marginBottom="@dimen/detailTextSpacing"
             android:gravity="center"
             android:text="@string/sign_term"
+            android:textAppearance="@style/TextAppearance.Suit.D3"
             android:textColor="@color/gray_300"
-            android:textSize="@dimen/typographyDescription"
             app:layout_constraintBottom_toTopOf="@id/next"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -147,7 +109,7 @@
             android:layout_marginBottom="@dimen/spacingBase"
             android:enabled="@{viewModel.validPasswordFormat == true}"
             android:onClick="@{() -> viewModel.requestSign(SignType.SIGN_UP)}"
-            android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(R.string.sign_up)}"
+            android:text="@{viewModel.signProcessStatus == ProcessStatus.IN_PROGRESS ? `` : @string/sign_up}"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@string/sign_up" />
 
