--- a/app/src/main/res/layout/fragment_how_to_noti_setting.xml
+++ b/app/src/main/res/layout/fragment_how_to_noti_setting.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".presentation.howtouse.screens.HowToLinkSharingFragment">
+    tools:context=".presentation.howtouse.screens.HowToNotiSettingFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,39 +16,31 @@
             android:src="@drawable/background_noti_setting"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/how_to_user_title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/how_to_use_image">
+            android:layout_marginTop="24dp"
+            android:text="@string/noti_setting"
+            android:textAppearance="@style/TextAppearance.Suit.H1"
+            android:textColor="@color/gray_700"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/how_to_use_image" />
 
-            <TextView
-                android:id="@+id/how_to_user_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:fontFamily="@font/suit_b"
-                android:text="@string/noti_setting"
-                android:textColor="@color/gray_700"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/how_to_user_description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/spacingBase"
-                android:layout_marginTop="@dimen/spacing12"
-                android:fontFamily="@font/suit_r"
-                android:gravity="center"
-                android:lineSpacingExtra="5dp"
-                android:text="@string/how_to_use_noti_setting_description"
-                android:textColor="@color/gray_700"
-                android:textSize="@dimen/typographyBase"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/how_to_user_title" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/how_to_user_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/spacingBase"
+            android:layout_marginTop="@dimen/spacing12"
+            android:gravity="center"
+            android:lineSpacingExtra="@dimen/lineSpacing"
+            android:text="@string/how_to_use_noti_setting_description"
+            android:textAppearance="@style/TextAppearance.Suit.D2"
+            android:textColor="@color/gray_700"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/how_to_user_title" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
