--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -162,7 +162,7 @@
     </style>
 
     <style name="Widget.Button.Full.Round.Black" parent="Widget.Button.Full.Round">
-        <item name="backgroundTint">@color/black</item>
+        <item name="backgroundTint">@color/gray_700</item>
         <item name="android:textColor">@color/white</item>
     </style>
 
