[feat] 웹뷰 변경된 컬러, 서체 시스템 적용

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -290,6 +290,11 @@
         <item name="android:background">@color/gray_25</item>
     </style>
 
+    <style name="Widget.Divider" parent="">
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@color/gray_100</item>
+    </style>
+
     <style name="Calendar" />
 
     <style name="Calendar.CalendarViewStyle">
