--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,13 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_nav"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="56dp"
             android:background="@color/white"
-            android:paddingVertical="4dp"
+            android:paddingVertical="2dp"
             app:itemIconSize="20dp"
             app:itemIconTint="@drawable/selector_navigation_menu_item_color"
-            app:itemTextAppearanceActive="@style/TextAppearance.BottomNavigation.Tab.Text"
-            app:itemTextAppearanceInactive="@style/TextAppearance.BottomNavigation.Tab.Text"
+            app:itemTextAppearanceActive="@style/TextAppearance.Montserrat.D1"
+            app:itemTextAppearanceInactive="@style/TextAppearance.Montserrat.D1"
             app:itemTextColor="@drawable/selector_navigation_menu_item_color"
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
