[feat] 링크 공유 화면 변경된 컬러, 서체 시스템, 뷰 배치 간격 적용

--- a/app/src/main/res/drawable/background_dialog_top_corner.xml
+++ b/app/src/main/res/drawable/background_dialog_top_corner.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <corners
         android:topLeftRadius="@dimen/radiusBase"
-        android:topRightRadius="@dimen/radiusBase" />
+        android:topRightRadius="@dimen/radiusMedium" />
     <solid android:color="@color/white" />
 </shape>
