--- a/app/src/main/res/layout/activity_wish_link_sharing.xml
+++ b/app/src/main/res/layout/activity_wish_link_sharing.xml
@@ -6,10 +6,6 @@
 
     <data>
 
-        <import type="android.view.View" />
-
-        <import type="com.hyeeyoung.wishboard.R" />
-
         <import type="com.hyeeyoung.wishboard.presentation.common.types.ProcessStatus" />
 
         <import type="com.hyeeyoung.wishboard.util.DateFormatUtilKt" />
@@ -38,6 +34,7 @@
                 style="@style/Widget.Button.Icon.Navigation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
                 android:src="@drawable/ic_close"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -52,17 +49,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/typographyBase"
+                    android:layout_marginTop="6dp"
                     android:background="@null"
-                    android:ellipsize="end"
-                    android:fontFamily="@font/suit_r"
                     android:gravity="center"
                     android:hint="@string/item_name_hint"
                     android:inputType="text"
                     android:maxLines="1"
                     android:onTextChanged="@{viewModel::onItemNameTextChanged}"
                     android:text="@{viewModel.itemName}"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/typographyBase"
+                    android:textAppearance="@style/TextAppearance.Suit.D2"
+                    android:textColor="@color/gray_700"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -72,18 +68,18 @@
                     android:id="@+id/item_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacingMicro"
+                    android:layout_marginTop="6dp"
                     android:background="@null"
                     android:fontFamily="@font/montserrat_b"
                     android:hint="@string/price_hint"
                     android:inputType="number"
-                    android:text="@{viewModel.itemPrice}"
                     android:onTextChanged="@{viewModel::onItemPriceTextChanged}"
+                    android:text="@{viewModel.itemPrice}"
                     android:selection="@{viewModel.itemPrice.length()}"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="@color/gray_700"
                     android:textColorHint="@color/gray_300"
-                    android:textSize="@dimen/typographyBase"
+                    android:textSize="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/item_name"
@@ -93,7 +89,7 @@
                     android:id="@+id/noti_info_container"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing10"
+                    android:layout_marginTop="@dimen/spacingMicro"
                     android:gravity="center_vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -102,28 +98,26 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="@dimen/spacing5"
+                        android:layout_marginEnd="@dimen/spacingMicro"
                         android:src="@drawable/ic_noti_small" />
 
                     <TextView
                         android:id="@+id/noti_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/suit_r"
                         android:paddingVertical="@dimen/spacing10"
-                        android:text="@{viewModel.notiType == null ? context.getString(R.string.item_registration_noti_setting_title) : String.format(context.getString(R.string.item_notification_info_short), DateFormatUtilKt.convertKoreanDate(viewModel.notiDate), viewModel.notiType.str)}"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/typographyDescription"
+                        android:text="@{viewModel.notiType == null ? @string/item_registration_noti_setting_title : @string/item_notification_info_short(DateFormatUtilKt.convertKoreanDate(viewModel.notiDate), viewModel.notiType.str)}"
+                        android:textAppearance="@style/TextAppearance.Suit.D3"
+                        android:textColor="@color/gray_700"
                         tools:text="22년 3월 8일 10시 재입고" />
 
                     <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:onClick="@{() -> viewModel.resetNotiInfo()}"
-                        android:paddingHorizontal="@dimen/spacing5"
-                        android:paddingVertical="@dimen/spacing10"
+                        android:paddingHorizontal="@dimen/spacingMicro"
                         android:src="@drawable/ic_delete_circle"
-                        android:visibility="@{viewModel.notiType == null ? View.GONE : View.VISIBLE}"
+                        app:visibility="@{viewModel.notiType != null}"
                         tools:visibility="visible" />
                 </LinearLayout>
 
@@ -132,13 +126,9 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/widgetSquareFolder"
                     android:layout_marginStart="@dimen/spacingBase"
-                    android:layout_marginBottom="@dimen/spacing5"
-                    android:layout_weight="1"
+                    android:layout_marginTop="6dp"
                     android:clipToPadding="false"
-                    android:nestedScrollingEnabled="false"
-                    android:overScrollMode="never"
                     android:paddingEnd="6dp"
-                    app:layout_constraintBottom_toTopOf="@id/add"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/noti_info_container" />
@@ -161,11 +151,10 @@
                     android:id="@+id/add"
                     style="@style/Widget.Button.Full.Round.Activate.Green"
                     android:layout_width="match_parent"
-                    android:layout_marginHorizontal="@dimen/spacingBase"
-                    android:layout_marginBottom="@dimen/spacingBase"
+                    android:layout_marginTop="@dimen/spacingBase"
                     android:enabled="@{viewModel.isEnabledUploadButton}"
-                    android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : context.getString(viewModel.isLogin == false ? R.string.wish_list_registration_button_text_for_unregister_user : R.string.wish_list_registration_button_text)}"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="@{viewModel.registrationStatus == ProcessStatus.IN_PROGRESS ? `` : viewModel.isLogin == false ? @string/wish_list_registration_button_text_for_unregister_user : @string/wish_list_registration_button_text}"
+                    app:layout_constraintTop_toBottomOf="@id/folder_list"
                     tools:text="@string/wish_list_registration_button_text" />
 
                 <com.airbnb.lottie.LottieAnimationView
@@ -189,6 +178,7 @@
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="-40dp"
+            android:foreground="@drawable/foreground_circle_black_alpha_5"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_app_logo_black"
             app:layout_constraintBottom_toTopOf="@id/container"
