--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="spacing12">12dp</dimen>
     <dimen name="spacing14">14dp</dimen>
     <dimen name="spacingBase">16dp</dimen>
+    <dimen name="spacing20">20dp</dimen>
 
     <dimen name="lineSpacing">4dp</dimen>
     <dimen name="detailTextSpacing">6dp</dimen>
@@ -15,7 +16,7 @@
     <!-- Widget -->
     <dimen name="widgetAppBarHeight">56dp</dimen>
     <dimen name="widgetBottomDialogHeightBase">312dp</dimen>
-    <dimen name="widgetBottomDialogContentHeightBase">264dp</dimen>
+    <dimen name="widgetBottomDialogContentHeightBase">254dp</dimen>
     <dimen name="widgetHeightBase">50dp</dimen>
     <dimen name="widgetSquareFolder">80dp</dimen>
 
@@ -28,6 +29,7 @@
     <dimen name="radiusMicro">5dp</dimen>
     <dimen name="radiusSmall">10dp</dimen>
     <dimen name="radiusBase">16dp</dimen>
+    <dimen name="radiusMedium">20dp</dimen>
     <dimen name="radiusLarge">32dp</dimen>
-    <dimen name="spacing20">20dp</dimen>
+
 </resources>
