[feat] 폴더 선택 다이얼로그 변경된 컬러, 서체 시스템, 뷰 배치 간격 적용

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <!-- TODO rename -->
     <color name="transparent">#00000000</color>
-    <color name="semi_transparent">#0D626056</color>
+    <color name="semi_transparent">#0D626056</color> <!-- TODO delete -->
     <color name="transparent_300">#4D000000</color>
     <color name="transparent_700">#B3000000</color>
     <color name="ultra_semi_transparent">#10000000</color>
