--- a/app/src/main/res/layout/dialog_bottom_folder_list.xml
+++ b/app/src/main/res/layout/dialog_bottom_folder_list.xml
@@ -11,44 +11,21 @@
         android:background="@drawable/background_dialog_top_corner"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/folder_list_title"
-                android:textAppearance="@style/Widget.Dialog.TextAppearance.Title"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/close"
-                style="@style/Widget.Button.Icon.Navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_close"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/top_dialog_bar"
+            layout="@layout/view_top_dialog_bar"
+            app:title="@{@string/folder_list_title}" />
 
         <TextView
             android:id="@+id/no_item_view"
             style="@style/Widget.TextAppearance.NoItemView.Detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spacingBase"
             android:text="@string/folder_no_item_view"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/folder_list"
+            app:layout_constraintTop_toTopOf="parent"
             tools:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -56,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/widgetBottomDialogContentHeightBase"
             android:clipToPadding="false"
-            android:paddingBottom="100dp"
+            android:paddingBottom="@dimen/itemListBottomSpacing"
             android:scrollbarFadeDuration="0"
             android:scrollbarSize="5dp"
             android:scrollbarThumbVertical="@android:color/darker_gray"
@@ -65,7 +42,7 @@
             app:dividerHeight="@{2f}"
             app:dividerPadding="@{0f}"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toBottomOf="@id/top_dialog_bar"
             tools:listitem="@layout/item_folder_horizontal" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
