--- a/app/src/main/res/layout/item_folder_horizontal.xml
+++ b/app/src/main/res/layout/item_folder_horizontal.xml
@@ -22,7 +22,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/shape_border_radius_32"
-            android:foreground="@color/semi_transparent"
+            android:foreground="@color/black_alpha_5"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,10 +33,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing10"
-            android:fontFamily="@font/suit_r"
             android:text="@{item.name}"
+            android:textAppearance="@style/TextAppearance.Suit.D2"
             android:textColor="@color/gray_700"
-            android:textSize="@dimen/typographyBase"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/check"
             app:layout_constraintStart_toEndOf="@id/thumbnail"
