--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -147,6 +147,7 @@
         <item name="android:textColor">@color/selector_button_text_sub_color</item>
     </style>
 
+    <!-- TODO delete -->
     <style name="Widget.Button.Full.Round.Activate.Green.CenterDialog" parent="Widget.Button.Full.Round.Activate.Green">
         <item name="android:paddingTop">@dimen/spacing12</item>
         <item name="android:paddingBottom">@dimen/spacing12</item>
