--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,9 +19,8 @@
     </style>
 
     <style name="AppTheme.NumberPicker">
-        <item name="android:textSize">@dimen/typographyBase</item>
-        <item name="android:textColor">@color/gray_700</item>
-        <item name="android:fontFamily">@font/suit_m</item>
+        <item name="android:textAppearance">@style/TextAppearance.Suit.D1</item>
+        <item name="android:textColor">@color/gray_600</item>
         <item name="android:colorControlNormal">@color/transparent</item>
     </style>
 
