--- a/app/src/main/res/layout/dialog_bottom_shop_link_input.xml
+++ b/app/src/main/res/layout/dialog_bottom_shop_link_input.xml
@@ -20,43 +20,20 @@
         android:background="@drawable/background_dialog_top_corner"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/shop_link_dialog_title"
-                android:textAppearance="@style/Widget.Dialog.TextAppearance.Title"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageButton
-                android:id="@+id/back"
-                style="@style/Widget.Button.Icon.Navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_close"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/top_dialog_bar"
+            layout="@layout/view_top_dialog_bar"
+            app:title="@{@string/shop_link_dialog_title}" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/widgetBottomDialogContentHeightBase"
-            app:layout_constraintTop_toBottomOf="@id/toolbar">
+            app:layout_constraintTop_toBottomOf="@id/top_dialog_bar">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/shop_link_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/background_dialog"
                 app:layout_constraintBottom_toTopOf="@id/get_item"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +50,6 @@
                     android:onTextChanged="@{viewModel::onItemUrlInputTextChanged}"
                     android:paddingEnd="40dp"
                     android:text="@{viewModel.itemUrlInput}"
-                    android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -91,14 +67,13 @@
 
                 <TextView
                     android:id="@+id/shop_link_detail_text"
+                    style="@style/Widget.TextAppearance.Detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing5"
                     android:text="@string/wish_basic_invalid_shop_link_detail"
-                    android:textAppearance="@style/Widget.TextAppearance.Detail"
-                    android:visibility="@{viewModel.isValidItemUrl == false &amp;&amp; viewModel.isValidItemUrl != null ? View.VISIBLE : View.INVISIBLE}"
                     app:layout_constraintStart_toStartOf="@id/shop_link"
-                    app:layout_constraintTop_toBottomOf="@id/shop_link" />
+                    app:layout_constraintTop_toBottomOf="@id/shop_link"
+                    app:visibility="@{viewModel.isValidItemUrl == false &amp;&amp; viewModel.isValidItemUrl != null}" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -106,7 +81,7 @@
                 android:id="@+id/get_item"
                 style="@style/Widget.Button.Full.Round.Activate.Green"
                 android:layout_width="match_parent"
-                android:layout_margin="@dimen/spacingBase"
+                android:layout_marginBottom="@dimen/spacingBase"
                 android:enabled="@{viewModel.itemUrlInput.length() > 0}"
                 android:text="@string/wish_basic_get_item_info_button_text"
                 app:layout_constraintBottom_toBottomOf="parent" />
