--- a/app/src/main/res/layout/activity_how_to_use.xml
+++ b/app/src/main/res/layout/activity_how_to_use.xml
@@ -35,7 +35,7 @@
             android:id="@+id/yes"
             style="@style/Widget.Button.Full.Round.Black"
             android:layout_width="match_parent"
-            android:layout_margin="@dimen/spacingBase"
+            android:layout_marginBottom="@dimen/spacingBase"
             android:text="@string/how_to_use_yes_button_text"
             app:layout_constraintBottom_toBottomOf="parent" />
 
