--- a/app/src/main/res/layout/dialog_my_exit.xml
+++ b/app/src/main/res/layout/dialog_my_exit.xml
@@ -57,9 +57,10 @@
                 android:layout_marginTop="@dimen/spacing20"
                 android:layout_marginEnd="@dimen/spacing12"
                 android:hint="@string/my_membership_exit_email_hint"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:onTextChanged="@{viewModel::onEmailTextChanged}"
+                android:text="@{viewModel.inputEmail}"
                 android:textAppearance="@style/Widget.EditText.Basic.TextAppearance"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/description" />
